ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 3.6.1, 3.7.1
    • Affects Version/s: None
    • Component/s: Networking
    • Fully Compatible
    • ALL
    • v3.6
    • Hide

      1. Using the latest 3.6
      2. redeploy the services

      Show
      1. Using the latest 3.6 2. redeploy the services
    • Platforms 2017-12-18, Platforms 2018-01-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We run mongo in docker. We were using 3.4 before and everything was good.

      Yesterday we upgraded to 3.6 and redeploy our docker services, then mongo reported the error "Failed to unlink socket file /tmp/mongodb-27017.sock Operation not permitted"

      The detailed log,

      2017-12-07T13:10:09.637+0000 I CONTROL  [initandlisten] options: { config: "/etc/mongodb.conf", security: { authorization: "enabled" }, storage: { dbPath: "/data/db2", mmapv1: { smallFiles: true } } }
      2017-12-07T13:10:09.657+0000 I -        [initandlisten] Detected data files in /data/db2 created by the 'wiredTiger' storage engine, so setting the active storage engine to 'wiredTiger'.
      2017-12-07T13:10:09.657+0000 I STORAGE  [initandlisten]
      2017-12-07T13:10:09.657+0000 I STORAGE  [initandlisten] ** WARNING: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine
      2017-12-07T13:10:09.657+0000 I STORAGE  [initandlisten] **          See http://dochub.mongodb.org/core/prodnotes-filesystem
      2017-12-07T13:10:09.657+0000 I STORAGE  [initandlisten] wiredtiger_open config: create,cache_size=1383M,session_max=20000,eviction=(threads_min=4,threads_max=4),config_base=false,statistics=(fast),log=(enabled=true,archive=true,path=journal,compressor=snappy),file_manager=(close_idle_time=100000),checkpoint=(wait=60,log_size=2GB),statistics_log=(wait=0),
      2017-12-07T13:10:13.422+0000 E STORAGE  [initandlisten] WiredTiger error (-31802) [1512652213:422674][1:0x7fd7c63e7d40], txn-recover: unsupported WiredTiger file version: this build  only supports major/minor versions up to 1/0,  and the file is version 2/0: WT_ERROR: non-specific WiredTiger error
      2017-12-07T13:10:13.422+0000 E STORAGE  [initandlisten] WiredTiger error (0) [1512652213:422729][1:0x7fd7c63e7d40], txn-recover: WiredTiger is unable to read the recovery log.
      2017-12-07T13:10:13.422+0000 E STORAGE  [initandlisten] WiredTiger error (0) [1512652213:422736][1:0x7fd7c63e7d40], txn-recover: This may be due to the log files being encrypted, being from an older version or due to corruption on disk
      2017-12-07T13:10:13.422+0000 E STORAGE  [initandlisten] WiredTiger error (0) [1512652213:422742][1:0x7fd7c63e7d40], txn-recover: You should confirm that you have opened the database with the correct options including all encryption and compression options
      2017-12-07T13:10:13.422+0000 E STORAGE  [initandlisten] WiredTiger error (-31802) [1512652213:422757][1:0x7fd7c63e7d40], txn-recover: Recovery failed: WT_ERROR: non-specific WiredTiger error
      2017-12-07T13:10:13.425+0000 I -        [initandlisten] Assertion: 28595:-31802: WT_ERROR: non-specific WiredTiger error src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp 276
      2017-12-07T13:10:13.425+0000 I STORAGE  [initandlisten] exception in initAndListen: 28595 -31802: WT_ERROR: non-specific WiredTiger error, terminating
      2017-12-07T13:10:13.425+0000 I NETWORK  [initandlisten] shutdown: going to close listening sockets...
      2017-12-07T13:10:13.425+0000 I NETWORK  [initandlisten] removing socket file: /tmp/mongodb-27017.sock
      2017-12-07T13:10:13.425+0000 I NETWORK  [initandlisten] shutdown: going to flush diaglog...
      2017-12-07T13:10:13.425+0000 I CONTROL  [initandlisten] now exiting
      2017-12-07T13:10:13.425+0000 I CONTROL  [initandlisten] shutting down with code:100
      

            Assignee:
            Jonathan Reams
            Reporter:
            lang qiu
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: