SERVER-32216 Remove UNIX sockets on clean shutdown

(cherry picked from commit 9dc34426570cc57cfdb4b6f6ea4f31018662082f)