src/mongo/transport/transport_layer_asio.cpp
@@ -199,7 +199,7 @@ Status TransportLayerASIO::setup() {
                 }
             }
 #endif
-            _acceptors.emplace_back(std::move(acceptor));
+            _acceptors.emplace_back(std::make_pair(std::move(addr), std::move(acceptor)));
         }
     }
 
@@ -244,8 +244,8 @@ Status TransportLayerASIO::start() {
     });
 
     for (auto& acceptor : _acceptors) {
-        acceptor.listen(serverGlobalParams.listenBacklog);
-        _acceptConnection(acceptor);
+        acceptor.second.listen(serverGlobalParams.listenBacklog);
+        _acceptConnection(acceptor.second);
     }
 
     const char* ssl = "";
@@ -266,7 +266,16 @@ void TransportLayerASIO::shutdown() {
     // Loop through the acceptors and cancel their calls to async_accept. This will prevent new
     // connections from being opened.
     for (auto& acceptor : _acceptors) {
-        acceptor.cancel();
+        acceptor.second.cancel();
+        auto& addr = acceptor.first;
+        if (addr.getType() == AF_UNIX && !addr.isAnonymousUNIXSocket()) {
+            auto path = addr.getAddr();
+            log() << "removing socket file: " << path;
+            if (::unlink(path.c_str()) != 0) {
+                const auto ewd = errnoWithDescription();
+                warning() << "Unable to remove UNIX socket " << path << ": " << ewd;
+            }
+        }
     }
 
     // If the listener thread is joinable (that is, we created/started a listener thread), then
