src/mongo/transport/transport_layer_asio.h
@@ -157,7 +157,7 @@ private:
     SSLParams::SSLModes _sslMode;
 #endif
 
-    std::vector<GenericAcceptor> _acceptors;
+    std::vector<std::pair<SockAddr, GenericAcceptor>> _acceptors;
 
     // Only used if _listenerOptions.async is false.
     stdx::thread _listenerThread;
