src/mongo/util/net/sockaddr.h
@@ -133,6 +133,7 @@ struct SockAddr {
 
     bool isLocalHost() const;
     bool isDefaultRoute() const;
+    bool isAnonymousUNIXSocket() const;
 
     bool operator==(const SockAddr& r) const;
 
